# mdns-scan-avahi

./: Makefile  README.md  meson.build
src/: mdns-scan-avahi.c  meson.build
